gccida/g1/canonicalize_condition
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9534:4: error: expected ';' after expression
rtx v9; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9534:5: error: use of undeclared identifier 'v9'
rtx v9; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9535:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9539:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9539:5: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
rtx nonnote_insn; // rax 
    ^~~~~~~~~~~~
    note_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9540:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9540:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9541:4: error: expected ';' after expression
rtx v17; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9541:5: error: use of undeclared identifier 'v17'
rtx v17; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9558:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)cond[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9567:84: error: use of undeclared identifier 'v9'
if ( rtx_class[v10] == 60 && const_tiny_rtx[0][*( ( unsigned __int8 *)rtx + 2)] == v9 && rtx != want_reg ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9572:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9575:84: error: use of undeclared identifier 'v9'
if ( rtx_class[v10] != 60 || const_tiny_rtx[0][*( ( unsigned __int8 *)rtx + 2)] != v9 || rtx == want_reg ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9580:1: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
nonnote_insn = prev_nonnote_insn( v5); 
^~~~~~~~~~~~
note_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9581:6: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
v5 = nonnote_insn; 
     ^~~~~~~~~~~~
     note_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9582:34: error: use of undeclared identifier 'nonnote_insn'
if ( !nonnote_insn || *( _WORD *)nonnote_insn != 32 ) 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9582:7: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
if ( !nonnote_insn || *( _WORD *)nonnote_insn != 32 ) 
      ^~~~~~~~~~~~
      note_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:9584:20: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
v16 = set_of( rtx, nonnote_insn); 
                   ^~~~~~~~~~~~
                   note_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canonicalize_condition/src/obj/loop.o] Error 1
